# Title-Extraction

./: README.md  docker-compose.yaml  main.py  pyproject.toml
docs/: paper_info.csv
output/: extraction_results.csv
src/agent/: relevance.py
src/configs/: __init__.py  logging_config.py  prompts.py  settings.py
src/extraction/: parser.py  processor.py
